// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spacer> should render spacer - default size 1`] = `
<View
  style={
    Array [
      Object {
        "height": 18,
        "width": 18,
      },
      Object {},
    ]
  }
/>
`;

exports[`<Spacer> should render spacer - default size, full width, in debug mode 1`] = `
<View
  style={
    Array [
      Object {
        "height": 18,
        "width": 18,
      },
      Object {
        "width": "100%",
      },
      Object {
        "backgroundColor": "pink",
      },
      Object {},
    ]
  }
/>
`;

exports[`<Spacer> should render spacer - large size 1`] = `
<View
  style={
    Array [
      Object {
        "height": 18,
        "width": 18,
      },
      Object {
        "height": 22,
        "width": 22,
      },
      Object {
        "large": true,
      },
    ]
  }
/>
`;

exports[`<Spacer> should render spacer - largest size 1`] = `
<View
  style={
    Array [
      Object {
        "height": 18,
        "width": 18,
      },
      Object {
        "height": 26,
        "width": 26,
      },
      Object {
        "largest": true,
      },
    ]
  }
/>
`;

exports[`<Spacer> should render spacer - medium size 1`] = `
<View
  style={
    Array [
      Object {
        "height": 18,
        "width": 18,
      },
      Object {
        "height": 14,
        "width": 14,
      },
      Object {
        "medium": true,
      },
    ]
  }
/>
`;

exports[`<Spacer> should render spacer - small size 1`] = `
<View
  style={
    Array [
      Object {
        "height": 18,
        "width": 18,
      },
      Object {
        "height": 10,
        "width": 10,
      },
      Object {
        "small": true,
      },
    ]
  }
/>
`;

exports[`<Spacer> should render spacer - smallest size 1`] = `
<View
  style={
    Array [
      Object {
        "height": 18,
        "width": 18,
      },
      Object {
        "height": 6,
        "width": 6,
      },
      Object {
        "smallest": true,
      },
    ]
  }
/>
`;
